# SaOYaD-SZN

./: .coverage  .gitignore  ACHIEVEMENTS.md  README.md  daily.txt  pyproject.toml  requirements-dev.txt  star_repos.py
.github/workflows/: ci.yml  create-issue.yml  daily-commit.yml
tests/: test_star_repos.py
